--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,27 +70,47 @@ a:after {
 
 
 
-
-
 #sponsors {
+  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
+
+.secondary-sponors ul:last-child {
+  padding-bottom: 100px!important;
+}
 
 
 #sponsors ul {
  display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 400px;
   padding: 0;
 }
 
 
+.secondary-sponsors ul {
+  height: 300px;
+}
 
-#sponsors img {
+
+
+.primary-sponsors ul {
+  height: auto;
+}
+
+.secondary-sponsors img {
 
   width: auto;
   max-width: 250px;
+  height: auto;
+  text-decoration: none;
+}
+
+.primary-sponsors img {
+
+  width: auto;
+  max-width: 500px;
   height: auto;
   text-decoration: none;
 }
@@ -104,11 +124,20 @@ a:after {
 
 }
 
-#sponsors li:first-child {
+.secondary-sponsors li:first-child {
   padding-bottom: 50px;
 }
 
 
+
+#sponsors .col-sm-6m ul, #sponsors .col-md-6 ul, #sponsors .col-lg-6 ul{
+  padding: 0!important;
+}
+
+
+#sponsors .col-sm-6m, #sponsors .col-md-6, #sponsors .col-lg-6{
+  padding: 0!important;
+}
 
 
 
@@ -260,6 +289,26 @@ col-sm-8 col-md-4 col-lg-8
     text-align: center;
   }
 
+  .primary-sponsors img {
+    max-width: 250px;
+  }
+
+  #sponsors li:first-child {
+    padding-top: 0;
+  }
+
+
+  .secondary-sponsors ul {
+    padding-bottom: 0;
+  }
+
+
+  .primary-sponsors ul>li {
+    padding-bottom: 25px;
+  }
+
+
+
 }
 /* ---------- */
 
@@ -400,8 +449,13 @@ col-sm-8 col-md-4 col-lg-8
 }
 
 .main-navigation li > a:hover {
+  text-decoration: none;
+  color: rgb(224, 224, 224);
+}
 
- color: rgb(224, 224, 224);
+.main-navigation li > a:focus {
+  color: inherit;
+  text-decoration: none;
 }
 
 .main-navigation li > a {
@@ -799,6 +853,7 @@ hr {
 #agenda h1 {
   text-transform: uppercase;
   padding-bottom: 1em;
+  color: #949494;
 
 }
 
@@ -832,11 +887,11 @@ hr {
 
 
 
-#schedule {
+#agenda {
   color: #333;
 }
 
-#schedule tr {
+#agenda tr {
   background-color: rgb(239, 239, 239);
 }
 
@@ -850,7 +905,7 @@ padding: .5em 2em;
 
 
 
-#schedule .table-condensed>tbody>tr>td:last-child {
+#agenda .table-condensed>tbody>tr>td:last-child {
   text-align: left;
 }
 
