--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -284,7 +284,11 @@ col-sm-8 col-md-4 col-lg-8
   }
 
   .primary-sponsors img {
-    max-width: 250px;
+    max-width: 350px;
+  }
+
+  .secondary-sponsors img {
+    max-width: 200px;
   }
 
   #sponsors li:first-child {
