--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,7 +305,9 @@ col-sm-8 col-md-4 col-lg-8
     padding-bottom: 25px;
   }
 
-
+  #faqs .col-sm-12>p, #faqs .col-md-12>p, #faqs .col-lg-12>p {
+    text-align: justify!important;
+  }
 
 }
 /* ---------- */
@@ -803,6 +805,7 @@ padding-bottom: 2em;
 #faqs .col-sm-12>p, #faqs .col-md-12>p, #faqs .col-lg-12>p {
   text-align: center;
   padding-bottom: 2em;
+  padding: 0 1em;
 }
 
 
