--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -628,6 +628,24 @@ col-sm-8 col-md-4 col-lg-8
 
 
 
+.btn-secondary {
+  background-color: rgb(194,194,194);
+  color: rgb(102,102,102);
+  border-color: rgb(162,163,163);
+}
+
+.btn-secondary:hover, .btn-secondary:focus {
+  background-color: rgba(194,194,194,.7);
+  color: rgba(71, 71, 71, .8);
+  border-color: rgba(71, 71, 71, .5);
+}
+
+
+
+
+
+
+
 .btn-default {
   background-color: rgb(187, 0, 0);
   color: rgb(239, 239, 239);
@@ -639,8 +657,6 @@ col-sm-8 col-md-4 col-lg-8
   color: rgb(239, 239, 239);
   border-color: rgb(131, 0, 0);
 }
-
-
 
 
 
